--- a/tech-support-site/src/App.css
+++ b/tech-support-site/src/App.css
@@ -1,22 +1,14 @@
+* {
+  margin: 0;
+  padding: 0;
+}
 .App {
   text-align: center;
+  color: black;
 }
-
-.App-logo {
-  height: 40vmin;
+header {
+  font-size: 30px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #09d3ac;
+img {
+  max-width: 40em;
 }
