--- a/src/App.css
+++ b/src/App.css
@@ -1,84 +1,97 @@
 :root {
-	--service-box-size: 44vh;
+  /* --service-box-size: 60%; */
+  --primary-color: #89b6d4;
+  --dark-color: #333333;
+  --light-color: #ffffff;
+  --bad-color: #d46671;
+  --good-color: #5ba36c;
 }
+
 * {
-	margin: 0;
-	padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 .App {
-	text-align: center;
-	color: black;
+  text-align: center;
+  color: black;
+  height: 100vh;
 }
 header {
-	font-size: 20px;
-	background-color: black;
-	color: #fff;
+  font-size: 20px;
+  background-color: black;
+  color: #fff;
+  height: 15%;
+}
+body {
+  height: 75%;
 }
 img {
-	/* max-width: 60vw; */
-	max-height: var(--service-box-size);
+  /* max-width: 60vw; */
+  max-height: 100%;
 }
 .HeadGrid {
-	display: grid;
-	grid-template-columns: 33vw 33vw 33vw;
-	grid-template-rows: 90px 90px;
-	grid-gap: 10px;
+  display: grid;
+  grid-template-columns: 33vw 33vw 33vw;
+  grid-template-rows: 90px 90px;
+  grid-gap: 10px;
 }
 
 .HeadBox {
-	border-radius: 5px;
-	padding: 20px;
-	text-align: center;
-	font-size: 30px;
-	font-family: 'Open Sans', sans-serif;
+  border-radius: 5px;
+  padding: 20px;
+  text-align: center;
+  font-size: 30px;
+  font-family: "Open Sans", sans-serif;
 }
 
 .NavGrid {
-	display: grid;
-	grid-template-columns: 10vw 20vw 20vw 20vw 20vw 10vw;
-	/* grid-template-rows: 500px; */
+  display: grid;
+  grid-template-columns: 10% 20% 20% 20% 20% 10%;
+  /* grid-template-rows: 500px; */
 }
 
 .NavBox {
-	border-radius: 5px;
+  border-radius: 5px;
 
-	text-align: center;
-	font-size: 30px;
-	font-family: 'Open Sans', sans-serif;
-	color: black;
+  text-align: center;
+  font-size: 30px;
+  font-family: "Open Sans", sans-serif;
+  color: black;
 }
 .ServicesGrid {
-	display: grid;
-	grid-template-columns: 50% 50%;
-	grid-template-rows: var(--service-box-size);
-	grid-gap: 10px;
-	background-color: #e6e6e6;
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 100%;
+  /* grid-gap: 10px; */
+  background-color: #e6e6e6;
+  overflow: hidden;
 }
 .ServicesBox {
-	text-align: center;
-	font-family: 'Open Sans', sans-serif;
-	color: black;
+  text-align: center;
+  font-family: "Open Sans", sans-serif;
+  color: black;
 }
 .ServicesBox ul {
-	font-size: 20px;
-	list-style-type: none;
-	padding-bottom: 10px;
+  font-size: 20px;
+  list-style-type: none;
+  padding-bottom: 10px;
 }
 .ServicesBox li {
-	padding: 1vh;
+  padding: 1vh;
 }
 a {
-	color: black;
+  color: black;
 }
 a:hover {
-	color: #f0f0f0;
+  color: #f0f0f0;
 }
 .QuoteBox {
-	background-color: #8abad0;
-	height: 20vh;
+  background-color: #8abad0;
+  height: 10%;
 }
 .QuoteBox h1 {
-	font-size: 25px;
-	font-style: italic;
-	padding: 2vh 10vw;
+  font-size: 25px;
+  font-style: italic;
+  padding: 2vh 10% 0;
 }
