--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@
   height: 100vh;
 }
 header {
-  font-size: 20px;
+  font-size: 2vh;
   background-color: black;
   color: #fff;
   height: 15%;
@@ -47,7 +47,7 @@ img {
 
 .NavGrid {
   display: grid;
-  grid-template-columns: 10% 20% 20% 20% 20% 10%;
+  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
   /* grid-template-rows: 500px; */
 }
 
@@ -61,13 +61,14 @@ img {
 }
 .ServicesGrid {
   display: grid;
-  grid-template-columns: 50% 50%;
-  grid-template-rows: 100%;
+  grid-template-columns: repeat(auto-fit, minmax(700px, 1fr));
+  grid-template-rows: repeat(auto-fit);
   /* grid-gap: 10px; */
   background-color: #e6e6e6;
   overflow: hidden;
 }
 .ServicesBox {
+  width: 100vh;
   text-align: center;
   font-family: "Open Sans", sans-serif;
   color: black;
@@ -88,10 +89,43 @@ a:hover {
 }
 .QuoteBox {
   background-color: #8abad0;
-  height: 10%;
+  /* height: 10%; */
 }
 .QuoteBox h1 {
-  font-size: 25px;
+  font-size: 2vh;
   font-style: italic;
-  padding: 2vh 10% 0;
+  padding: 2vh 10%;
+}
+.BusinessGrid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  /* grid-template-rows: 100%; */
+}
+.BusinessBox {
+  text-align: left;
+}
+.BusinessServicesGrid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-template-rows: 10vh;
+  grid-gap: 10px;
+}
+.BusinessServicesBox {
+  font-weight: bold;
+  padding: 30px;
+  text-align: center;
+  background-color: var(--primary-color);
+}
+.Phone {
+  text-align: left;
+  padding-left: 10px;
+}
+@media screen and (max-width: 800px) {
+  .ServicesBox {
+    text-align: left;
+  }
+  .Phone {
+    text-align: center;
+    padding-left: 0;
+  }
 }
