--- a/src/App.css
+++ b/src/App.css
@@ -1,161 +1,175 @@
 :root {
-  /* --service-box-size: 60%; */
-  --primary-color: #89b6d4;
-  --dark-color: #333333;
-  --light-color: #e7e7e7;
-  --bad-color: #d46671;
-  --good-color: #5ba36c;
-  --background-light: #d6d6d6;
+	/* --service-box-size: 60%; */
+	--primary-color: #89b6d4;
+	--dark-color: #333333;
+	--light-color: #e7e7e7;
+	--bad-color: #d46671;
+	--good-color: #5ba36c;
+	--background-light: #d6d6d6;
 }
 
 * {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 }
 .App {
-  text-align: center;
-  color: black;
-  height: 100vh;
-  background-color: var(--background-light);
+	text-align: center;
+	color: black;
+	height: 100vh;
+	background-color: black;
 }
 header {
-  font-size: 2vh;
-  background-color: var(--dark-color);
-  background-color: black;
-  color: #fff;
-  height: 15%;
-  text-align: center;
-  text-decoration: "none";
+	font-size: 2vh;
+	background-color: var(--dark-color);
+	background-color: black;
+	color: #fff;
+	height: 15%;
+	text-align: center;
+	text-decoration: 'none';
 }
-header a {
-}
+
 body {
-  background-color: var(--background-light);
-  height: 75%;
+	background-color: var(--background-light);
+	/* height: 90%; */
 }
 img {
-  /* max-width: 60vw; */
-  max-height: 100%;
-  box-shadow: 5px 5px 10px;
+	max-width: 100%;
+	/* max-height: 100%; */
+	box-shadow: 5px 5px 10px;
 }
 
 .HeadGrid {
-  display: grid;
-  grid-template-columns: 33vw 33vw 33vw;
-  grid-template-rows: 90px 90px;
-  grid-gap: 10px;
+	display: grid;
+	grid-template-columns: 33vw 33vw 33vw;
+	grid-template-rows: 90px 90px;
+	grid-gap: 10px;
 }
 
 .HeadBox {
-  border-radius: 5px;
-  padding: 20px;
-  text-align: center;
-  font-size: 30px;
-  font-family: "Open Sans", sans-serif;
+	border-radius: 5px;
+	padding: 20px;
+	text-align: center;
+	font-size: 30px;
+	font-family: 'Open Sans', sans-serif;
 }
 
 .NavGrid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-  /* grid-template-rows: 500px; */
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+	/* grid-template-rows: 500px; */
 }
 
 .NavBox {
-  /* border-radius: 5px; */
+	/* border-radius: 5px; */
 
-  text-align: center;
-  font-size: 30px;
-  font-family: "Open Sans", sans-serif;
-  color: black;
+	text-align: center;
+	font-size: 30px;
+	font-family: 'Open Sans', sans-serif;
+	color: black;
 }
 .ServicesGrid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(610px, 1fr));
-  grid-template-rows: repeat(auto-fit);
-  /* grid-gap: 10px; */
-  /* background-color: #e6e6e6; */
-  overflow: hidden;
-  background-color: black;
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+	height: 100%;
+	grid-template-rows: repeat(auto-fit);
+	/* grid-gap: 10px; */
+	/* background-color: #e6e6e6; */
+	/* overflow: hidden; */
+	/* height: 100%; */
+	background-color: black;
+	padding: 7vw 0;
 }
 .ServicesBox {
-  width: 100vh;
-  text-align: center;
-  font-family: "Open Sans", sans-serif;
-  color: black;
-  padding: 0 10vw;
+	/* max-width: 100vw; */
+	text-align: center;
+
+	font-family: 'Open Sans', sans-serif;
+	color: black;
+
+	/* padding: 0 10vw; */
 }
 .ServicesBox ul {
-  background-color: black;
-  font-size: 20px;
-  list-style-type: none;
-  padding-bottom: 10px;
-  border-radius: 5px;
-  /* box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.43); */
+	background-color: black;
+	font-size: 20px;
+	list-style-type: none;
+	padding-bottom: 10px;
+	border-radius: 5px;
+	/* box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.43); */
 
-  color: var(--light-color);
+	color: var(--light-color);
 }
 .ServicesBox li {
-  padding: 1vh;
+	padding: 1vh;
+	float: center;
 }
 a {
-  color: black;
+	color: black;
 }
 a:hover {
-  color: #f0f0f0;
+	color: #f0f0f0;
 }
 .QuoteBox {
-  background-color: #8abad0;
-  /* height: 10%; */
-  margin-top: 5vh;
-  position: absolute;
-  bottom: 0;
-  width: 100%;
+	background-color: #8abad0;
+	/* height: 10%; */
+	/* padding-top: 5vh; */
+	/* position: absolute;
+	bottom: 0; */
+	width: 100%;
 }
 .QuoteBox h1 {
-  font-size: 2vh;
-  font-style: italic;
-  padding: 2vh 10%;
+	font-size: 2vh;
+	font-style: italic;
+	padding: 2vh 10%;
 }
 .BusinessGrid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-  /* grid-template-rows: 100%; */
-  grid-gap: 5vw;
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+	/* grid-template-rows: 100%; */
+	grid-gap: 5vw;
 }
 .BusinessBox {
-  text-align: left;
-  max-width: 90vw;
-  /* min-height: 50vh; */
+	text-align: left;
+	max-width: 90vw;
+	/* min-height: 50vh; */
 }
 .BusinessServicesGrid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-  grid-template-rows: 10vh;
-  grid-gap: 10px;
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+	grid-template-rows: 10vh;
+	grid-gap: 10px;
 }
 .BusinessServicesBox {
-  font-weight: bold;
-  padding: 30px;
-  text-align: center;
-  background-color: var(--primary-color);
-  max-width: 100vw;
-  border-radius: 10px;
+	font-weight: bold;
+	padding: 30px;
+	text-align: center;
+	background-color: var(--primary-color);
+	max-width: 100vw;
+	border-radius: 10px;
 }
 
 .Phone {
-  text-align: left;
-  padding: 10px 0 0 10px;
+	text-align: left;
+	padding: 10px 0 0 10px;
 }
-@media screen and (max-width: 800px) {
-  .ServicesBox {
-    text-align: left;
-  }
-  .Phone {
-    text-align: center;
-    padding-left: 0;
-  }
-  .QuoteBox {
-    position: relative;
-  }
+/* @media screen and (max-width: 800px) {
+	.ServicesBox {
+		text-align: left;
+	}
+	.Phone {
+		text-align: center;
+		padding-left: 0;
+	}
+	.QuoteBox {
+		position: relative;
+	}
+} */
+
+.Offering {
+	font-size: 3vh;
+	color: var(--light-color);
+	padding-bottom: 10px;
+}
+.Offering p {
+	padding: 5px 0;
 }
