--- a/src/components/style/Home.css
+++ b/src/components/style/Home.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
 @media screen and (max-width: 620px) {
 	.welcome {
 		background-color: #ffb641;
@@ -34,12 +35,12 @@
 .p-grid {
 	margin-right: 0 !important;
 }
-.p-panel {
+.nav-panel {
 	margin: 0 1vw;
 	transition: transform 0.2s !important; /* Animation */
 	/* box-shadow: 1px 1px 5px 1px #696969 !important; */
 }
-.p-panel:hover {
+.nav-panel:hover {
 	transform: scale(1.1);
 }
 .p-grid {
@@ -52,49 +53,23 @@
 	background-repeat: repeat;
 	background-attachment: fixed;
 }
-.p-panel-content {
+.nav-panel .p-panel-content {
 	color: #007ad9 !important;
 
 	/* background-color: #d195724b !important; */
 	min-height: 40vh;
 	font-size: 18px;
 }
-.p-panel-content > p {
+.nav-panel .p-panel-content > p {
 	color: black !important;
 	/* background-color: rgba(31, 147, 224, 0.411) !important; */
 	font-size: 18px;
 }
-.p-panel-title {
+.nav-panel .p-panel-title {
 	font-size: 3vh;
 }
 .icon {
 	margin-bottom: 1vh;
-}
-.service-item {
-	margin: 1vh 5vw;
-	color: white !important;
-	background-color: rgb(66, 66, 66) !important;
-	padding: 20px 0;
-	box-shadow: 5px 5px 8px 3px #494949 !important;
-	transition: transform 0.2s !important; /* Animation */
-	/* z-index: 0; */
-}
-.service-item:hover {
-	transform: scale(1.1);
-	background-color: #007ad9 !important;
-	z-index: 1000 !important;
-}
-.service-list {
-	background-image: url('../../images/computer_table_3.jpg');
-	background-attachment: fixed;
-	background-size: cover;
-}
-.imgContainer {
-	display: block;
-	margin: auto;
-	/* border: 1px solid #dddddd; */
-
-	position: relative;
 }
 
 .tag {
@@ -180,4 +155,21 @@ ul {
 }
 .welcome-text {
 	margin: 8vw 5vw;
+}
+.divider {
+	background-color: #ffcf81;
+	padding: 5vh 0;
+	box-shadow: 0px 0px 30px 5px #696969 !important;
+	position: relative;
+	z-index: 10;
+}
+.divider-text {
+	font-size: 50px;
+	color: rgb(13, 134, 233);
+	font-family: 'Abril Fatface', cursive;
+	/* text-shadow: 9px 0px 9px #858585b0; */
+	margin: 0 !important;
+}
+.footer {
+	height: 10vh;
 }
