--- a/src/components/style/Home.css
+++ b/src/components/style/Home.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap');
 @media screen and (max-width: 620px) {
 	.welcome {
 		background-color: #ffb641;
@@ -26,6 +27,8 @@
 	width: 100%;
 	/* margin-bottom: 5vh; */
 	/* height: 20vh; */
+	max-height: 20vh;
+	object-fit: cover;
 }
 .white-desk-image {
 	width: 100%;
@@ -106,7 +109,7 @@ ul {
 	height: 90vh;
 }
 .tt {
-	font-family: 'Libre Baskerville', serif;
+	font-family: 'Fira Sans', sans-serif;
 	font-size: 55px;
 	margin-bottom: 10vh;
 }
@@ -141,7 +144,7 @@ ul {
 	}
 }
 .su {
-	font-family: 'Libre Baskerville', sans-serif;
+	font-family: 'Fira Sans', sans-serif;
 	font-size: 30px;
 	margin-bottom: 0;
 }
@@ -165,11 +168,8 @@ ul {
 }
 .divider-text {
 	font-size: 50px;
-	color: rgb(13, 134, 233);
-	font-family: 'Abril Fatface', cursive;
+	color: #006fc4;
+	font-family: 'Fira Sans', sans-serif;
 	/* text-shadow: 9px 0px 9px #858585b0; */
 	margin: 0 !important;
-}
-.footer {
-	height: 10vh;
 }
