--- a/src/components/style/Home.css
+++ b/src/components/style/Home.css
@@ -22,6 +22,17 @@
 		background-attachment: fixed;
 		background-size: cover !important;
 	}
+	.alert-box {
+		top: 20vh !important;
+		width: 90vw !important;
+	}
+}
+.alert-box {
+	position: absolute;
+	z-index: 1000;
+	top: 15vh;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
 .laptop-table-image {
 	width: 100%;
@@ -52,14 +63,13 @@
 	/* background-image: linear-gradient(to bottom right, #2a78ec, #2a78ec44); */
 }
 .service-types {
-	background-image: url('../../images/pattern.png');
-	background-repeat: repeat;
+	background-size: cover;
 	background-attachment: fixed;
+	background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+		url('../../images/computers.jpg') no-repeat center center fixed;
 }
 .nav-panel .p-panel-content {
-	color: #007ad9 !important;
-
-	/* background-color: #d195724b !important; */
+	background-color: #ffffff !important;
 	min-height: 40vh;
 	font-size: 18px;
 }
@@ -68,10 +78,12 @@
 	/* background-color: rgba(31, 147, 224, 0.411) !important; */
 	font-size: 18px;
 }
+
 .nav-panel .p-panel-title {
 	font-size: 3vh;
 }
 .icon {
+	color: #007ad9 !important;
 	margin-bottom: 1vh;
 }
 
@@ -160,7 +172,7 @@ ul {
 	margin: 8vw 5vw;
 }
 .divider {
-	background-color: #d49838;
+	background-color: #0f71da;
 	padding: 5vh 0;
 	box-shadow: 0px 0px 30px 5px #696969 !important;
 	position: relative;
